[package]
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"
license = "MIT"
name = "examples"
publish = false
version = "0.1.0"

[[bin]]
name = "tonic-cookie-test"
path = "src/server.rs"

[dependencies]
prost = "0.9"
tokio = { version = "1.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net",] }

tonic = { version = "0.6.2", features = ["tls", "compression"] }

tower = { version = "0.4" }
tower-cookies = "0.5.1"

# Tracing
tracing = "0.1.16"
tracing-attributes = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["tracing-log"] }

# Required for wellknown types
prost-types = "0.9"

# grpc-web example
bytes = "1"
tonic-web = "0.2.0"


[build-dependencies]
tonic-build = { version = "0.6.2", features = ["prost", "compression"] }
